# research-builder

./: .gitignore  MIGRATION_PLAN.md  README.md  pyproject.toml  spec_v4.md
.archive/: README.md
.archive/research-builder-v1/tests/: test_dependency.py  test_orchestrator.py  test_viewer_store.py
.github/workflows/: tests.yml
commands/: README.md  post-mortem.md
custom-harness/: README.md  pyproject.toml
custom-harness/docs/: prompt_ambiguity_audit.md
custom-harness/examples/attention_run/canonical_spec/: state.yaml
custom-harness/examples/attention_run/phases/architecture/1/outputs/: _result.json  attention.py
custom-harness/examples/attention_run/phases/data/1/outputs/: _result.json  dataloader.py  vocab_en_fr.json
custom-harness/examples/attention_run/phases/eval/1/outputs/: bleu_scores.json
custom-harness/examples/attention_run/phases/results/1/outputs/: results_summary.json
custom-harness/examples/attention_run/phases/results/1/src/: test_results.py
custom-harness/examples/attention_run/phases/training/1/outputs/: _result.json
custom-harness/examples/test_paper_run/: README.md
custom-harness/examples/test_paper_run/phases/data/1/outputs/: _result.json
custom-harness/examples/test_paper_run/phases/eval/1/outputs/: _result.json  metrics.json
custom-harness/examples/test_paper_run/phases/eval/1/src/: test_evaluate.py
custom-harness/examples/test_paper_run/phases/training/1/outputs/: training_log.json
custom-harness/examples/test_paper_run/phases/training/1/src/: test_train.py
custom-harness/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
custom-harness/frontend/src/: App.tsx  index.css  vite-env.d.ts
custom-harness/frontend/src/components/: ActivityView.tsx  AgentsView.tsx  ArtifactToast.tsx  ChatPanel.tsx  CitationText.tsx  ClaimsDashboard.tsx  CommandPalette.tsx  ComputeView.tsx  Diff.tsx  DocsView.tsx  ErrorBoundary.tsx  Face.tsx  FileDiffModal.tsx  FilesView.tsx  Launcher.tsx  Markdown.tsx  OrchestratorChat.tsx  PdfViewer.tsx  ReportView.tsx  SectionSpecCard.tsx  SpecEditModal.tsx  SpecView.tsx  StatusDot.tsx  Tabs.tsx  TopBar.tsx  TraceView.tsx  ViewSwitcher.tsx
custom-harness/frontend/src/lib/: agents.ts  api.ts  diff.ts  events.ts  face.ts  highlight.ts  shortcuts.ts  trace.ts  types.ts
custom-harness/src/research_builder/: access_tools.py  chat.py  config.py  console.py  face.py  interaction.py  main.py  resume.py  terminal_input.py  ui.py
custom-harness/src/research_builder/cloud/: lambda_cloud.py  provisioner.py
custom-harness/src/research_builder/commands/: __init__.py  client.py  inbox.py  listener.py
custom-harness/src/research_builder/events/: __init__.py  emitter.py
custom-harness/src/research_builder/literature/: __init__.py
custom-harness/src/research_builder/models/: claims.py  context.py  spec.py
custom-harness/src/research_builder/orchestrator/: agent.py  dependency.py  loop.py  prompts.py  runtime_tools.py  section_verifier.py
custom-harness/src/research_builder/rag/: __init__.py  agent.py  chunker.py  index.py
custom-harness/src/research_builder/storage/: paper_repo.py  run_summary.py  spec_store.py  step_records.py  traces.py  workspace.py
custom-harness/src/research_builder/sub_agent/: agent.py  prompts.py  tools.py
custom-harness/src/research_builder/viewer/: __init__.py  __main__.py  browse.py  browse_cli.py  cli.py  inline.py  live_viewer.py  store.py
custom-harness/src/research_builder/viewer/sources/: command_sink.py  event_stream.py  state_loader.py
custom-harness/src/research_builder/web/: __init__.py  api.py  app.py  cascade.py  cli.py  events_ws.py  state.py
custom-harness/tests/: test_access_tools.py  test_e2e.py  test_failure.py  test_json_extract.py  test_loop.py  test_models.py  test_paper.py  test_section_verifier.py  test_storage.py  test_sub_agent.py  test_tools.py  test_viewer_event_stream.py  test_web.py
custom-harness/tools/: make_test_paper.py
examples/attention_run/canonical_spec/: spec.md
mcp/: README.md
paper-skeleton/: CLAUDE.md  README.md  pyproject.toml
paper-skeleton/notes/: claims.yaml  journal.md
paper-skeleton/scripts/: overfit-one-batch.sh  reproduce.sh  smoke.sh
paper-template/: .gitignore  .mcp.json  CLAUDE.md  README.md
paper-template/.claude/commands/: compare.md  reproduce.md
paper-template/.claude/skills/: post-mortem.md
paper-template/notes/: claims.md  claims.yaml  plan.md
papers/attention-is-all-you-need/: .gitignore  CLAUDE.md  pyproject.toml
papers/attention-is-all-you-need/.claude/commands/: compare.md  reproduce.md  verify.md
papers/attention-is-all-you-need/.claude/skills/: compare-to-paper.md  reproduce-not-search.md
papers/attention-is-all-you-need/configs/: base.yaml  smoke.yaml
papers/attention-is-all-you-need/notes/: claims.yaml  journal.md  plan.md
papers/attention-is-all-you-need/paper/: paper.txt
papers/attention-is-all-you-need/scripts/: compare-claims.py  extract-paper-text.py  lookup-citation.py  overfit-one-batch.sh  reproduce.sh  smoke.sh  train-tokenizer.py
papers/attention-is-all-you-need/src/: attention.py  data.py  eval.py  positional.py  tokenize.py  train.py  transformer.py  wmt.py
papers/attention-is-all-you-need/tests/: test_attention.py  test_eval.py  test_model.py  test_positional.py  test_tokenize.py  test_wmt.py
skills/: README.md  compare-to-paper.md  verification-ladder.md
src/research_builder/: chat.py  config.py  interaction.py  main.py  resume.py
src/research_builder/commands/: __init__.py  inbox.py
src/research_builder/events/: emitter.py
src/research_builder/literature/: references.py
src/research_builder/llm/: client.py  paper.py
src/research_builder/mcp_servers/: arxiv.py  claims.py  paper_reader.py
src/research_builder/models/: __init__.py  context.py  results.py  spec.py
src/research_builder/orchestrator/: agent.py  (+5 more)
tests/: test_e2e.py  test_llm_client.py  test_loop.py  test_models.py  test_orchestrator.py  test_storage.py  test_sub_agent.py  test_tools.py
tools/: README.md
(+64 files in other folders)
