[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-builder"
version = "0.1.0"
description = "Multi-agent harness for reproducing research paper results"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "mcp>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pdfplumber>=0.11",
    "click>=8.0",
    "prompt-toolkit>=3.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "textual>=0.79",
    "rich>=13.7",
    "torch>=2.0",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
research-builder = "research_builder.main:cli"
research-builder-viewer = "research_builder.viewer.cli:main"
rb-mcp-paper = "research_builder.mcp_servers.paper_reader:main"
rb-mcp-arxiv = "research_builder.mcp_servers.arxiv:main"
rb-mcp-claims = "research_builder.mcp_servers.claims:main"

[tool.hatch.build.targets.wheel]
packages = ["src/research_builder"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
