[project]
name = "research-builder-toolkit"
version = "0.3.0"
description = "Paper reproduction template + helper scripts for Claude Code"
requires-python = ">=3.11"
dependencies = [
    # paper-template/scripts/extract-paper-text.py
    "pdfplumber>=0.11",
    # paper-template/scripts/compare-claims.py
    "pyyaml>=6.0",
]

# Per-paper deps (torch, datasets, tokenizers, sacrebleu, pytest, etc.) live in
# each paper repo's own pyproject.toml — see
# papers/attention-is-all-you-need/pyproject.toml for an example.
#
# Helper scripts in paper-template/scripts/ that need extra deps document them
# inline (e.g. lookup-citation.py uses only the stdlib urllib).
#
# bin/lambda is also stdlib-only.
#
# The original 9.5k LoC harness lived under src/research_builder/ and is now
# preserved at custom-harness/. Its dependencies (claude-agent-sdk,
# textual, prompt-toolkit, sentence-transformers, click, rich, etc.) are NOT
# part of this toolkit env; checkout commit 90076ce or earlier to resurrect.
