[project]
name = "research-builder-harness"
version = "1.0.0"
description = "The original 9.5k LoC autonomous Python harness for paper reproduction. Peer to the Claude Code skill workflow at the toolkit root."
requires-python = ">=3.11"
dependencies = [
    # LLM driver — orchestrator + sub-agents both spawn via Agent SDK
    "claude-agent-sdk>=0.1.0",
    # Pydantic models for spec/state/results/claims/context schemas
    "pydantic>=2.0",
    # state.yaml + revision_log.yaml + claims.yaml persistence
    "pyyaml>=6.0",
    # PDF text extraction (paper ingestion)
    "pdfplumber>=0.11",
    # CLI
    "click>=8.0",
    # .env file loading
    "python-dotenv>=1.0",
    # Lambda Cloud + Semantic Scholar HTTP clients
    "httpx>=0.27",
    # Terminal formatting (still used by orchestrator console output)
    "rich>=13.7",
    # Test runner
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.optional-dependencies]
# Real-time terminal UI for live phase status / activity feed / chat pane.
# Skipped in v1 of the resurrection (textual API drift adds 2-4 hours of work
# we don't need to land headless mode).
tui = ["textual>=0.79", "prompt-toolkit>=3.0"]

# Pre-built paper search index used by sub-agents (search_paper MCP tool).
# Heavy install (~2 GB with torch); enable only if you want RAG on the paper.
rag = ["torch>=2.0", "sentence-transformers>=3.0"]

[project.scripts]
research-builder = "research_builder.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/research_builder"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
