[project]
name = "research-builder-harness"
version = "1.0.0"
description = "The original 9.5k LoC autonomous Python harness for paper reproduction. Peer to the Claude Code skill workflow at the toolkit root."
requires-python = ">=3.11"
dependencies = [
    # LLM driver — orchestrator + sub-agents both spawn via Agent SDK
    "claude-agent-sdk>=0.1.0",
    # Pydantic models for spec/state/results/claims/context schemas
    "pydantic>=2.0",
    # state.yaml + revision_log.yaml + claims.yaml persistence
    "pyyaml>=6.0",
    # PDF text extraction (paper ingestion)
    "pdfplumber>=0.11",
    # CLI
    "click>=8.0",
    # .env file loading
    "python-dotenv>=1.0",
    # Lambda Cloud + Semantic Scholar HTTP clients
    "httpx>=0.27",
    # Terminal formatting + live viewer (rich.live.Live + rich.panel)
    "rich>=13.7",
    # Interactive chat console (paper questions during pipeline pauses).
    # If you drop the chat console entirely, this becomes optional.
    "prompt-toolkit>=3.0",
    # Test runner
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    # claude-agent-sdk's newer versions import these but don't always declare
    # them as hard deps — pull them in explicitly.
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

# (Removed): The [tui] extra used to install textual + prompt-toolkit for the
# original Textual-based viewer. The viewer was simplified to a rich-based
# scrolling transcript (rich is in base deps); the Textual app and its
# Bloomberg-style multi-pane widgets were deleted. prompt-toolkit was still
# used by the legacy chat console (console.py) — kept in base deps:
#   - rich (terminal formatting, used by viewer + UI module)
#   - prompt-toolkit (legacy interactive chat console — to be removed)
#
# (Removed earlier): [rag] extra used to install torch + sentence-transformers
# for the search_paper MCP tool. Sub-agents now use the built-in Read tool with
# the ``pages`` parameter for selective PDF access.

[project.scripts]
research-builder = "research_builder.main:cli"
rb-viewer = "research_builder.viewer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/research_builder"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
